--- a/Testing_Asos_WebStore/Testing_Asos_WebStore.csproj
+++ b/Testing_Asos_WebStore/Testing_Asos_WebStore.csproj
@@ -61,7 +61,11 @@
   <ItemGroup>
     <Compile Include="AsosHomePage.cs" />
     <Compile Include="AsosStoreTests.cs" />
+    <Compile Include="ContactPreferencesPage.cs" />
+    <Compile Include="DeliveryAndReturnsPage.cs" />
+    <Compile Include="EasyReturnsPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReturnsInformationPage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
