--- a/Testing_Asos_WebStore/Testing_Asos_WebStore.csproj
+++ b/Testing_Asos_WebStore/Testing_Asos_WebStore.csproj
@@ -61,11 +61,16 @@
   <ItemGroup>
     <Compile Include="AsosHomePage.cs" />
     <Compile Include="AsosStoreTests.cs" />
+    <Compile Include="CheckoutPage.cs" />
     <Compile Include="ContactPreferencesPage.cs" />
     <Compile Include="DeliveryAndReturnsPage.cs" />
     <Compile Include="EasyReturnsPage.cs" />
+    <Compile Include="MenSection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReturnsInformationPage.cs" />
+    <Compile Include="MenSectionTests.cs" />
+    <Compile Include="AsosStoreTestsBasePage.cs" />
+    <Compile Include="VansShoesPage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
