--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@
 *.suo
 *.user
 *.userosscache
-*.sln.docstates
+*.sln.docstate
+*.testlog
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
