--- a/Testing_Asos_WebStore/Testing_Asos_WebStore.csproj
+++ b/Testing_Asos_WebStore/Testing_Asos_WebStore.csproj
@@ -45,6 +45,9 @@
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.2.1.2\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="SeleniumExtras.WaitHelpers, Version=3.11.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DotNetSeleniumExtras.WaitHelpers.3.11.0\lib\net45\SeleniumExtras.WaitHelpers.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -56,17 +59,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-<<<<<<< HEAD
     <Compile Include="AsosHomePage.cs" />
     <Compile Include="AsosStoreTests.cs" />
     <Compile Include="CheckoutPage.cs" />
     <Compile Include="ContactPreferencesPage.cs" />
     <Compile Include="DeliveryAndReturnsPage.cs" />
     <Compile Include="EasyReturnsPage.cs" />
+    <Compile Include="MenSandalsPage.cs" />
     <Compile Include="MenSection.cs" />
-=======
-    <Compile Include="UnitTest1.cs" />
->>>>>>> master
+    <Compile Include="OnlyBlackSandals.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReturnsInformationPage.cs" />
     <Compile Include="MenSectionTests.cs" />
